chore: minor mod

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Multiversx JS SDK Tools and Snippets",
   "description": "\"Multiversx-Tools-Snippets\" is a set of code snippets designed to enhance developer productivity and streamline common coding tasks within the Multiversx Tools ecosystem.",
   "version": "0.0.1",
-  "publisher": "jpchidera",
+  "publisher": "sire",
   "icon": "logo.png",
   "repository": {
     "url": "https://github.com/favourwright/extender-one/"
